# velr-python-examples

./: .gitignore  README.md  pyproject.toml
src/velr_examples/: __init__.py  __main__.py  basic_open.py  basic_query.py  bind_arrow_people.py  bind_pandas_people.py  bind_polars_people.py  csv_with_pandas_people.py  csv_with_polars_ticket_dependencies.py  cypher_aggregates.py  cypher_labels_and_properties.py  cypher_match.py  cypher_merge.py  cypher_merge_relationships.py  cypher_paths.py  cypher_relationships.py  cypher_unwind.py  cypher_var_length_paths.py  cypher_where.py  cypher_with.py  cypher_with_aggregates.py  explain.py  file_backed.py  fulltext_search.py  pandas_roundtrip_org_chart.py  plotting_from_pandas_movies.py  plotting_from_polars_tickets.py  polars_roundtrip_ticket_dependencies.py  query_parameters.py  rollback.py  rollback_on_drop.py  savepoints.py  streaming_tables.py  table_to_pandas.py  table_to_polars.py  table_to_pyarrow.py  to_pandas_movies.py  to_polars_movies.py  to_pyarrow_movies.py  transaction.py  (+5 more)
