[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "velr-python-examples"
version = "0.1.0"
description = "Examples showing how to use the Velr Python driver"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "velr",
]

[project.optional-dependencies]
arrow = [
  "pyarrow>=15",
]
pandas = [
  "pandas>=2",
  "pyarrow>=15",
]
polars = [
  "polars>=0.20",
  "pyarrow>=15",
]
plotting = [
  "matplotlib>=3.8",
]
all = [
  "pyarrow>=15",
  "pandas>=2",
  "polars>=0.20",
  "matplotlib>=3.8",
]

[project.urls]
Homepage = "https://velr.ai/"
Repository = "https://github.com/velr-ai/velr-python-examples"

[project.scripts]
velr-examples = "velr_examples.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["velr_examples*"]